bug(background-logo): fixed the z-index of the background logo

--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -31,6 +31,7 @@ body {
     /* REMOVE THIS LATER */
     margin-bottom: 50px;
     margin-top: 150px;
+    z-index: 1;
 }
 
 .results {
@@ -39,6 +40,7 @@ body {
     background-color: #272727;
     border-radius: 20px;
     margin-bottom: 15px;
+    z-index: 1;
 }
 
 .results-list{
